Prevent ranking from being overlapped

--- a/resources/assets/less/bem/beatmapset-score-big.less
+++ b/resources/assets/less/bem/beatmapset-score-big.less
@@ -61,7 +61,7 @@
 
   &__position {
     min-width: 60px;
-    width: auto;
+    flex: none;
 
     font-size: 25px;
     font-style: italic;
